metrics-cache/src/section/snapshots/metrics_cache__section__node_kubelet__tests__kube_node_kubelet_v1_connection_error.snap
---
source: metrics-cache/src/section/node_kubelet.rs
expression: "KubeNodeKubeletV1::from_node(&node, &healths)"
---
{
  "version": "v1.34.0",
  "health": {
    "message": "connection refused"
  }
}
